--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oakberry</title>
     <style>
         #nav2{background-image:url(img/gallery-1.jpg);background-color: black; background-size: cover; background-repeat: no-repeat; height: 100vh; position: relative;}
         #nav{display: flex; background-color: rgba(0, 0, 0, 0.406); height:11vh; width:100%;}
@@ -78,8 +78,6 @@
         #number{display: flex;  font-size:25px; height: 8vh; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
         #names{display: flex; justify-content: space-evenly; margin-top: 0%; height: 10vh;}
         #AU{color: #79e712;}
-        #mh{}
-        #mh1{}
         #text{width: 70%; color:#9e9e9e;}
         .number1{margin-left:90px;}
         .number2{margin-left:180px;}
